--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "usb-modeswitch-data-20120120.tar.bz2": 7288db828998d12f59fe25f89c5c9ba4cd78e185
+  usb-modeswitch-data-20121109.tar.bz2: 28f0a973b0931b31a47b87c963e96f436385455c
