--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
-sources:
+removed_sources:
   usb-modeswitch-data-20130610.tar.bz2: ed872b4ebb79289302e607498a5daf2a20072219
+sources:
+  usb-modeswitch-data-20130807.tar.bz2: 66e63d3d7026ac7d4298781e06ebfbd1836f9445
